<resources>
    <string name="app_name">Joter</string>
    <string name="add_note">Add Note</string>
    <string name="all_notes">All notes</string>
    <string name="auto_sync">Auto upload notes to the\ncloud to avoid losing them</string>
    <string name="sync">Sync</string>
    <string name="dismiss">Dismiss</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="no_notes">No notes! \nTap + icon to create one</string>
    <string name="voice_input_language">Voice input language</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="heading">Heading</string>
    <string name="note">Note</string>
    <string name="note_count">Notes: %d</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="list_view">List view</string>
    <string name="grid_view">Grid view</string>
    <string name="sort_by_time_created">Sort by time created</string>
    <string name="settings">Settings</string>
    <string name="date_time">%s, %s</string>
    <string name="sort_by_latest">Sort by latest</string>
    <string name="delete_note">Delete note</string>
    <string name="version">Version</string>
    <string name="about_joter">About Joter</string>
    <string name="ester_egg">Shruti \u2764\ufe0f</string>
    <string name="app_title">About Joter</string>
    <string name="about_message">Created by criticalAY\nMight contain bugs as its a beta version</string>
    <string name="learn_more">Learn more</string>
    <string name="ok">Ok</string>
</resources>