<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/share"
        android:title="@string/share"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_tick_normal"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_voice_input_language"
        android:title="@string/voice_input_language"
        app:showAsAction="collapseActionView" />

    <item
        android:visible="false"
        android:id="@+id/action_delete"
        android:title="@string/delete"
        app:showAsAction="collapseActionView" />
</menu>